--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,11 @@
 header {
+  position: fixed;
+  top: 0;
+  box-sizing: border-box;
+  width: 100%;
+  
   background-color: $blue1;
-  padding: 1rem 2rem;
+  padding: $padding-s;
   
   display: grid;
   grid-template-areas: 
@@ -9,6 +14,7 @@ header {
   align-items: center;
 
   @include medium {
+    padding: $padding-m;
     display: flex;
     justify-content: space-between;
     align-items: center;
