--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,6 +23,10 @@ $link-color-visited: mix(#fff, $link-color, 15%);
 
 $code-background: $blue2;
 
+/* padding */
+$padding-s: 0.5rem 1rem;
+$padding-m: 1rem 2rem;
+
 /* breakpoints */
 $screen-mid-min: 640px;
 $screen-large-min: 1020px;
